1.2.1.1 FIXED - Responsive font sizes and logo also started to work on the side panel that visible on mobile screen but it is commented

--- a/phase-1/css/style.css
+++ b/phase-1/css/style.css
@@ -59,18 +59,46 @@ header {
 }
 
 header nav {
-    padding: 0 140px;
+    padding: 0 35px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     /* Fix paddings on the sides thus responsive space is applied between the elements of the navigation bar  */
+    gap: 20px;
     align-items: center;
     width: 100%;
     height: 100px;
     background: var(--dark-backround);
-    opacity: 1;
+    opacity: 0.5;
     border-bottom: inset 1px var(--nav-border);
     /* Measured pixel height of the navigation bar is 100px so border applied inside */
 }
+
+header nav #nav-logo {
+    width: clamp(100px, 100px + 1vw, 250px);
+    margin-left: 15px;
+}
+
+header nav #nav-logo img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+header #nav-links-container {
+    padding-left: 20px;
+}
+
+/* @media screen and (max-width: 900px) {
+    header #nav-links-container {
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: min(300px, 80%);
+        height: 100vh;
+        padding-left: 20px;
+        background-color: var(--dark-backround);
+    }
+} */
 
 /* ------------------- */
 /* Styling the links */
@@ -88,6 +116,7 @@ header #nav-links a,
 header #nav-btns a {
     text-decoration: none;
     color: #fff;
+    font-size: clamp(0.9rem, 0.9rem + 0.1vw, 2rem);
 }
 
 header #nav-links li a {
@@ -140,6 +169,7 @@ header #nav-btns li a {
     display: block;
     color: inherit;
     cursor: pointer;
+    font-size: clamp(0.9rem, 0.9rem + 0.1vw, 2rem);
 }
 
 /* ------------------- */
@@ -153,7 +183,7 @@ header #nav-btns #btn-download {
 
 header #nav-btns #btn-download a {
     position: relative;
-    padding-bottom: 4px;
+    /* padding-bottom: 4px; */
     /* Same rule as before on the links ;) */
 }
 
@@ -182,7 +212,6 @@ header #nav-btns #btn-download a:hover::after {
 /* ------------------- */
 /* Styles only for Login button */
 /* ------------------- */
-
 
 header #nav-btns #btn-login {
     padding: 17px 23px;
